# mcp-test

./: README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/versions/: 3d16b16c6039_add_user_table.py  5c58b8eb1f06_add_user_table.py  6a2be1c50c2a_create_items_table.py  736cc131e899_create_new_mcp_server_and_register_table.py  794366c73a53_add_clients_table.py  7c32583e7b2d_create_initial_tables.py  bcbc611eacc6_create_initial_tables.py  cc0197905161_create_new_mcp_server_table.py  d899ad62f8f7_add_api_key_to_mcp_servers.py
app/: main.py
app/api/: dependencies.py  routes_auth.py  routes_client.py  routes_item.py  routes_mcp_client.py  routes_mcp_server.py  routes_registration.py  routes_user.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/mcp/: client.py  mcp_server.py  mcp_tools.py
app/mcp_local/: client.py  mcp_server.py  mcp_tools.py
app/models/: build_registration.py  client.py  item.py  mcp_server.py  user.py
app/repositories/: item.py
app/schemas/: build_registration.py  client.py  item.py  mcp_server.py  user.py
app/services/: build_registration_services.py  client_services.py  mcp_client_services.py  mcp_server_services.py  user_services.py
